[project]
name = "tok-dl"
version = "0.0.4"
authors = [{ name = "Sweepy", email = "git@sweepy.dev" }]
description = "Tok-DL: A TikTok Downloader that actually works"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = ["requests", "click", "validators", "pause", "loguru"]
keywords = ["tiktok", "downloader", "archiver"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/sweepies/tok-dl"
Repository = "https://github.com/sweepies/tok-dl.git"
Issues = "https://github.com/sweepies/tok-dl/issues"

[project.scripts]
tok-dl = "src.main:main"
